fix flashing on mobile by disabling overscroll

--- a/cc/css/story.css
+++ b/cc/css/story.css
@@ -500,3 +500,7 @@ strong {
   margin-top: auto;
   margin-bottom: auto;
 }
+
+html {
+  overscroll-behavior: none;
+}
